fixed viewheight on mobile

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
 
 .github {
 	scale: 65%;
-	margin: 2rem 0;
+	margin: 1rem 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -188,6 +188,10 @@ p {
 }
 
 @media screen and (max-width: 576px) {
+	#rps {
+		height: 100svh;
+	}
+
 	:root {
 		--status-width: 50%;
 	}
